cloudformation/security-groups.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: >
  Creates security groups for the highly available AWS web application architecture.

Parameters:

  # VPCId parameter to manually specify the VPC where the security groups will be created
  #VPCId:
  #  Type: AWS::EC2::VPC::Id
  # Description: VPC where the security groups will be created
  # Define VPCStackName:
  VPCStackName:
    Type: String
    Default: ha-webapp-vpc
    Description: Name of the CloudFormation stack containing the VPC

Resources:

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP traffic from the internet to the Application Load Balancer
      #VpcId: !Ref VPCId
      VpcId:
        Fn::ImportValue:
          !Sub '${VPCStackName}-VPCId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-ALB-SG' # !Sub: Substitute the stack name for the security group name

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP traffic from the Application Load Balancer
      #VpcId: !Ref VPCId
      VpcId:
        Fn::ImportValue:
          !Sub '${VPCStackName}-VPCId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-WebServer-SG'
  
  DatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow MySQL traffic only from the web servers
      VpcId:
        Fn::ImportValue:
          !Sub '${VPCStackName}-VPCId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-Database-SG'

Outputs:

  ALBSecurityGroupId:
    Description: Security Group ID for the Application Load Balancer
    Value: !Ref ALBSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-ALBSecurityGroupId'

  WebServerSecurityGroupId:
    Description: Security Group ID for the web servers
    Value: !Ref WebServerSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-WebServerSecurityGroupId'

  DatabaseSecurityGroupId:
    Description: Security Group ID for the database
    Value: !Ref DatabaseSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-DatabaseSecurityGroupId'
